cluster/apps/jjforge/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jjforge-prod
  annotations:
    argocd.argoproj.io/sync-wave: "0"
